# WotLK-Extensions

./: .clang-format  .editorconfig  .gitignore  README.md
Patcher/: Main.cpp
WotLKExtensions/: CMakeLists.txt  Main.cpp  Main.h
WotLKExtensions/CDBCMgr/: CDBC.cpp  CDBC.h  CDBCMgr.cpp  CDBCMgr.h  DBCPatch.cpp  DBCPatch.h
WotLKExtensions/CDBCMgr/CDBCDefs/: SpellClassMaskExtension.h
WotLKExtensions/Character/: AnimationFixes.cpp  AnimationFixes.h
WotLKExtensions/ClientData/: Achievements.h  ActionBar.h  Animation.h  Bindings.h  Camera.h  ClientAddresses.h  ClientFunctions.h  DBCRowTypes.h  DBCRows.h  Draw.h  Enums.h  Event.h  GameClient.h  GameEnums.h  GameObject.h  GameStructs.h  GxBatch.h  GxDevice.h  GxTypes.h  MathTypes.h  Object.h  ObjectFields.h  ObjectManager.h  ObjectModel.h  Players.h  SharedDefines.h  Spell.h  Streaming.h  System.h  UnitCombat.h  Units.h  VectorMath.h  WorldFrame.h
WotLKExtensions/Config/: LauncherSettings.cpp  LauncherSettings.h
WotLKExtensions/Cvars/: ActionRepeatCvar.cpp  ActionRepeatCvar.h  Cvar.cpp  Cvar.h  Cvars.cpp  Cvars.h  DebugOutputCvar.cpp  DebugOutputCvar.h  DiscordCvar.cpp  DiscordCvar.h  FeatureCvars.cpp  FeatureCvars.h  LootWindowCvar.cpp  LootWindowCvar.h  StartupDownloaderCvar.cpp  StartupDownloaderCvar.h
WotLKExtensions/Detours/: ClientDetours.cpp  ClientDetours.h  FrameDetours.cpp  FrameDetours.h  MultiCastBarDetours.cpp  MultiCastBarDetours.h  PacketDetours.cpp  PlayerDetours.cpp  SpellDetours.cpp  SystemDetours.cpp  UnitDetours.cpp  UnitDetours.h
WotLKExtensions/Editor/: EditorObject.h  EditorRuntime.cpp  EditorRuntime.h  EditorState.h  GizmoDraw.cpp  GizmoDraw.h  GizmoPick.h  MouseFunctions.cpp  MouseFunctions.h  QuatFunctions.cpp  QuatFunctions.h
WotLKExtensions/Entities/: Item.cpp  Item.h  Player.cpp  Player.h
WotLKExtensions/Helpers/: Misc.cpp  Misc.h  Util.cpp  Util.h
WotLKExtensions/Impl/: DiscordRPC.cpp  DiscordRPC.h
WotLKExtensions/Include/: Defines.h  Logger.cpp  Logger.h  Macros.h  PatchConfig.h  SharedDefines.h  TooltipDefines.h  flag96.h
WotLKExtensions/Input/: ActionRepeat.cpp  ActionRepeat.h
WotLKExtensions/Lua/: CustomLua.cpp  CustomLua.h  SharedXML.cpp  XMLExtensions.cpp  XMLExtensions.h
WotLKExtensions/Packets/: CustomPacket.cpp  CustomPacket.h  DBCRecordPackets.cpp  DBCRecordPackets.h  FeaturePackets.cpp  FeaturePackets.h  GemSocketPackets.cpp  GemSocketPackets.h  ItemDbCachePackets.cpp  ItemDbCachePackets.h  ItemLevelPackets.cpp  ItemLevelPackets.h  LootWindowPackets.cpp  LootWindowPackets.h  Packet.cpp  Packet.h  StreamingPackets.cpp  StreamingPackets.h  SystemPackets.cpp  SystemPackets.h  TalentFramePackets.cpp  TalentFramePackets.h  TestFramePackets.cpp  TestFramePackets.h  UnitLevelCache.cpp  UnitLevelCache.h
WotLKExtensions/Rendering/MSDF/: .clang-format  D3D.cpp  D3D.h  Enums.h  GameClient.h  Hooks.h  MSDF.cpp  MSDF.h  MSDFBootstrap.cpp  MSDFBootstrap.h  MSDFCache.cpp  MSDFCache.h  MSDFCacheTypes.h  MSDFFont.cpp  MSDFFont.h  MSDFManager.cpp  MSDFManager.h  MSDFPregen.cpp  MSDFPregen.h  MSDFShaders.h  MSDFUtils.h  MSDFValidator.h  Types.h
WotLKExtensions/Spells/: Spell.cpp  Spell.h
WotLKExtensions/Streaming/: BackgroundDownloader.cpp  BackgroundDownloader.h  DbcFromMpq.cpp  DbcFromMpq.h  DbcTransforms.inc  HttpClient.cpp  HttpClient.h  LauncherManifest.cpp  LauncherManifest.h  Sha256.cpp  Sha256.h
WotLKExtensions/Tools/: MPQScanner.cpp  MPQScanner.h
WotLKExtensions/discord/: .clang-format  core.cpp
libs/msdfgen/: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  msdfgen-ext.h  vcpkg.json
libs/msdfgen/cmake/: CMakePresets.json  msdfgenConfig.cmake.in
libs/msdfgen/ext/: import-svg.cpp  import-svg.h  resolve-shape-geometry.cpp  resolve-shape-geometry.h
